--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,13 @@ body {
 header {
   color: var(--HotPink);
   background: var(--DarkBlue);
-  background: linear-gradient(180deg, var(--DarkBlue) 0%, var(--HotPink) 33%, var(--Peach) 62%, var(--LightPurple) 100%);
+  background: linear-gradient(
+    180deg,
+    var(--DarkBlue) 0%,
+    var(--HotPink) 33%,
+    var(--Peach) 62%,
+    var(--LightPurple) 100%
+  );
   height: 200px;
 }
 
