Resolved Button visited state color

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,12 @@ input.button:active {
   background-color: var(--HotPink);
 }
 
+button:visited,
+.button1:visited,
+input.button:visited {
+  color: white;
+}
+
 .form__contact {
   background-color: var(--LightPurple);
   text-align: center;
