--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -323,6 +323,12 @@ input.button:active {
     text-align: center;
 }
 
+button:visited,
+.button1:visited,
+input.button:visited {
+  color: white;
+}
+
 table.tbl-experience {
     border-bottom: 1px solid grey;
     border-top: 1px solid grey;
