--- a/css/styles.css
+++ b/css/styles.css
@@ -367,18 +367,19 @@ svg* {
 }
 
 /* For smaller displays */
-@media all and (max-width: 415px) {
+@media all and (max-width: 430px) {
   .project-list {
     grid-template-columns: 1fr;
   }
 
   #HeaderLogoImage {
-    height: 30%;
+    height: 80%;
   }
 
   .page-header {
     display: flex;
     width: 100%;
+    height: 100px;
     padding: 5px 5px;
   }
 
@@ -394,7 +395,8 @@ svg* {
 
   .profile__portrait {
     display: block;
-    margin-right: 40px;
+    justify-content: center;
+    margin: auto;
     max-width: 300px;
     width: 100%;
     height: auto;
@@ -408,20 +410,20 @@ svg* {
   .navigation-list__item {
     transform: scale(0.9);
   }
-}
+  }
 
 /* For medium displays */
-@media all and (min-width: 415px) and (max-width: 820px) {
+@media all and (min-width: 430px) and (max-width: 1200px) {
   .project-list {
     grid-template-columns: 1fr 1fr;
   }
 
   #HeaderLogoImage {
-    height: 50%;
+    height: 80%;
   }
 }
 
-@media all and (max-width: 820px) {
+@media all and (max-width: 1200px) {
   .project-list {
     grid-gap: 10px;
   }
@@ -437,5 +439,17 @@ svg* {
 
   #CheckBackText {
     font-size: 20px;
+  }
+  .bio {
+    display: grid;
+  }
+  
+  .bio__text {
+    display: block;
+    margin: 5px;
+  }
+  .svg-beach {
+    width: 400px;
+    margin: 5px;
   }
 }
