--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -510,14 +510,14 @@ svg* {
 }
 
 /* For smaller displays */
-@media all and (max-width: 415px) {
+@media all and (max-width: 430px) {
     .project-list {
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     }
 
     #HeaderLogoImage {
-        height: 30%;
+        height: 80%;
     }
 
     .page-header {
@@ -525,6 +525,7 @@ svg* {
         display: -ms-flexbox;
         display: flex;
         width: 100%;
+        height: 100px;
         padding: 5px 5px;
     }
 
@@ -543,7 +544,8 @@ svg* {
 
     .profile__portrait {
         display: block;
-        margin-right: 40px;
+        justify-content: center;
+        margin: auto;
         max-width: 300px;
         width: 100%;
         height: auto;
@@ -557,22 +559,22 @@ svg* {
     .navigation-list__item {
         -webkit-transform: scale(0.9);
         transform: scale(0.9);
-    }
+    }    
 }
 
 /* For medium displays */
-@media all and (min-width: 415px) and (max-width: 820px) {
+@media all and (min-width: 430px) and (max-width: 1200px) {
     .project-list {
         -ms-grid-columns: 1fr 20px 1fr;
         grid-template-columns: 1fr 1fr;
     }
 
     #HeaderLogoImage {
-        height: 50%;
+        height: 80%;
     }
 }
 
-@media all and (max-width: 820px) {
+@media all and (max-width: 1200px) {
     .project-list {
         grid-gap: 10px;
     }
@@ -589,4 +591,16 @@ svg* {
     #CheckBackText {
         font-size: 20px;
     }
+    .bio {
+        display: grid;
+      }
+      
+      .bio__text {
+        display: block;
+        margin: 5px;
+      }
+      .svg-beach {
+        width: 400px;
+        margin: 5px;
+      }
 }
