--- a/css/styles.css
+++ b/css/styles.css
@@ -36,13 +36,7 @@ body {
 header {
   color: var(--HotPink);
   background: var(--DarkBlue);
-  background: linear-gradient(
-    180deg,
-    var(--DarkBlue) 0%,
-    var(--HotPink) 33%,
-    var(--Peach) 62%,
-    var(--LightPurple) 100%
-  );
+  background: linear-gradient(180deg, var(--DarkBlue) 0%, var(--HotPink) 33%, var(--Peach) 62%, var(--LightPurple) 100%);
   height: 200px;
 }
 
@@ -332,25 +326,25 @@ svg* {
 /* Boat animation */
 @keyframes boat-move {
   from {
-    transform: translate(-30px, 10px);
+      transform: translate(-30px, 10px);
   }
 
   to {
-    transform: translate(380px, 10px);
+      transform: translate(380px, 10px);
   }
 }
 
 @keyframes color-change {
   0% {
-    fill: var(--Sun-Lite);
+      fill: var(--Sun-Lite);
   }
 
   50% {
-    fill: var(--Sun-Mid);
+      fill: var(--Sun-Mid);
   }
 
   100% {
-    fill: var(--Sun-Full);
+      fill: var(--Sun-Full);
   }
 }
 
@@ -369,103 +363,103 @@ svg* {
 /* For smaller displays */
 @media all and (max-width: 430px) {
   .project-list {
-    grid-template-columns: 1fr;
+      grid-template-columns: 1fr;
   }
 
   #HeaderLogoImage {
-    height: 80%;
+      height: 80%;
   }
 
   .page-header {
-    display: flex;
-    width: 100%;
-    height: 100px;
-    padding: 5px 5px;
+      display: flex;
+      width: 100%;
+      height: 100px;
+      padding: 5px 5px;
   }
 
   .page-header__item {
-    flex: 0 1 200px;
+      flex: 0 1 200px;
   }
 
   .profile {
-    display: grid;
-    max-width: 415px;
-    margin: 0 auto;
+      display: grid;
+      max-width: 415px;
+      margin: 0 auto;
   }
 
   .profile__portrait {
-    display: block;
-    justify-content: center;
-    margin: auto;
-    max-width: 300px;
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
+      display: block;
+      justify-content: center;
+      margin: auto;
+      max-width: 300px;
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
   }
 
   .profile__text {
-    display: block;
+      display: block;
   }
 
   .navigation-list__item {
-    transform: scale(0.9);
+      transform: scale(0.9);
   }
-  }
+}
 
 /* For medium displays */
 @media all and (min-width: 430px) and (max-width: 1200px) {
   .project-list {
-    grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
   }
 
   #HeaderLogoImage {
-    height: 80%;
+      height: 80%;
   }
 }
 
 @media all and (max-width: 1200px) {
-  .page-header{
-    display: inline-block;
-    text-align: center;
+  .page-header {
+      display: inline-block;
+      text-align: center;
   }
-  .navigation-list{
-    margin: 5px;
-    padding: 5px;
-    text-align: center;
+  .navigation-list {
+      margin: 5px;
+      padding: 5px;
+      text-align: center;
   }
-  .navigation-list__item{
-    margin: 2px;
-    padding: 2px;
+  .navigation-list__item {
+      margin: 2px;
+      padding: 2px;
   }
-  main{
-    margin-top: 25px;
+  main {
+      margin-top: 25px;
   }
   .project-list {
-    grid-gap: 10px;
+      grid-gap: 10px;
   }
 
   .project-list__item:last-child {
-    grid-column: auto/auto;
-    grid-row: auto/auto;
+      grid-column: auto/auto;
+      grid-row: auto/auto;
   }
 
   h1 {
-    font-size: 22px;
+      font-size: 22px;
   }
 
   #CheckBackText {
-    font-size: 20px;
+      font-size: 20px;
   }
   .bio {
-    display: grid;
+      display: grid;
   }
-  
+
   .bio__text {
-    display: block;
-    margin: 5px;
+      display: block;
+      margin: 5px;
   }
   .svg-beach {
-    width: 400px;
-    margin: 5px;
+      width: 400px;
+      margin: 5px;
   }
 }
