--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -281,8 +281,29 @@ input.button:visited {
 }
 
 .form__contact {
-  background-color: #f6e6ff;
   text-align: center;
+}
+
+.contactheader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 900px;
+  margin: 10px auto;
+}
+
+.contactinfobox {
+  background-color: #a9bbe4;
+  border: 3px solid #0a1464;
+  margin-right: 25px;
+  border-radius: 15%;
+  padding: 30px;
+  margin-left: 80px;
+  width: 650px;
+  height: 200px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 table.tbl-experience {
@@ -455,6 +476,20 @@ svg* {
   .navigation-list__item {
       transform: scale(0.9);
   }
+  
+  .contactheader {
+    display: block;
+    margin: 10px auto;
+  }
+
+  .contactinfobox {
+    background-color: #a9bbe4;
+    border: 3px solid#0a1464;
+    margin: 15px;
+    padding: 25px;
+    width: auto;
+    height: auto;
+  }
 }
 
 /* For medium displays */
@@ -514,3 +549,4 @@ svg* {
       margin: 5px;
   }
 }
+
