--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
 :root {
+  --MainBlue: #052438;
+  --AccentBlue: #63B0A4;
+  --AccentPink: #922B55;
+  --LightText: #EFE9E4;
+  --ShadowAccentBlue: #4A8D89;
   --DarkBlue: #0a1464;
   --MidBlue: #1d2983;
   --LightBlue: #a9bbe4;
-  --HotPink: #e928bd;
   --Peach: #ef88aa;
   --OpacquePeach: #ef88aa80;
-  --LightPurple: #f6e6ff;
+  
   --Sun-Full: #f76414;
   --Sun-Mid: #fcffad;
   --Sun-Lite: #edc655;
@@ -26,17 +30,18 @@ html {
 /* end of credit */
 
 body {
-  background-color: var(--LightPurple);
-  font-family: "Roboto Slab", serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.1;
+  background-color: var(--MainBlue);
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 350;
+  font-size: 25px; 
+  color:var(--LightText);
 }
 
 header {
-  color: var(--HotPink);
-  background: var(--DarkBlue);
-  background: linear-gradient(180deg, var(--DarkBlue) 0%, var(--HotPink) 33%, var(--Peach) 62%, var(--LightPurple) 100%);
+  color: var(--AccentPink);
+  background: var(--MainBlue);
+  /* background: linear-gradient(180deg, var(--DarkBlue) 0%, var(--AccentPink) 33%, var(--Peach) 62%, var(--MainBlue) 100%); */
   height: 200px;
 }
 
@@ -62,8 +67,9 @@ main {
 /* Nav Bar Stylings */
 .main-navigation {
   text-align: center;
+  justify-content:center;
   font-size: 40px;
-  color: black;
+  color: var(--LightText);
   margin: 0 0;
   padding: 0;
 }
@@ -87,7 +93,7 @@ h1 {
   font-size: 30px;
   font-weight: var(--HeaderWeight);
   line-height: 1.5;
-  color: black;
+  color: var(--LightText);
 }
 
 h2 {
@@ -102,17 +108,17 @@ h3 {
 
 /* Link Stylings */
 a {
-  color: black;
+  color: var(--AccentBlue);
 }
 
 a:visited {
   /* Visited Link */
-  color: var(--MidBlue);
+  color: var(--ShadowAccentBlue);
 }
 
 a:active {
   /* Selected Link */
-  color: var(--HotPink);
+  color: var(--AccentPink);
 }
 
 a:hover,
@@ -124,24 +130,23 @@ a:focus {
 .navigation-list {
   list-style: none;
   text-decoration: none;
-  padding-top: 25px;
+  padding: 25px;  
+  margin: 0;
 }
 
 .navigation-list .navigation-list__item {
   display: inline-block;
   margin-left: 15px;
   font-size: 20px;
-  color: black;
+  color: var(--LightText);
   position: relative;
-  margin: 0px 10px;
-  padding: 10px 10px;
   z-index: 0;
-  cursor: pointer;
+  cursor: pointer;  
 }
 
 .navigation-list .navigation-list__item .navigation-list__item--active {
   text-decoration: none;
-  background-color: var(--LightBlue);
+  background-color: var(--AccentPink);
   padding: 10px 20px;
   border-radius: 10pt;
 }
@@ -152,7 +157,7 @@ a:focus {
   left: 0px;
   width: 100%;
   height: 2px;
-  background: white;
+  background: var(--LightText);
   content: "";
   opacity: 0;
   transition: all 0.3s;
@@ -172,11 +177,12 @@ a:focus {
 .topbottombordersOut a:hover:after {
   opacity: 1;
   transform: translateY(0px);
+  text-decoration: none;
 }
 
 /* Input Stylings */
 input:valid {
-  border: 2px solid black;
+  border: 2px solid var(--LightText);
 }
 
 input:invalid {
@@ -195,12 +201,12 @@ input.button {
   display: inline-block;
   font-family: inherit;
   text-decoration: none;
-  background-color: var(--DarkBlue);
-  color: white;
+  background-color: var(--ShadowAccentBlue);
+  color: var(--LightText);
   font-size: 20px;
   padding: 10px 20px;
   border-radius: 10pt;
-  border-bottom: 4px solid var(--MidBlue);
+  border-bottom: 4px solid var(--ShadowAccentBlue);
   transition: opacity 0.9s ease-in-out, transform 0.9s ease-in-out;
 }
 
@@ -211,8 +217,8 @@ button:focus,
 input.button:hover,
 input.button:focus {
   cursor: pointer;
-  background-color: var(--MidBlue);
-  outline: 2px solid var(--HotPink);
+  background-color: var(--ShadowAccentBlue);
+  outline: 2px solid var(--AccentPink);
   opacity: 0.9;
   transform: scale(1.1);
 }
@@ -220,13 +226,13 @@ input.button:focus {
 button:active,
 .button1:active,
 input.button:active {
-  background-color: var(--HotPink);
+  background-color: var(--AccentPink);
 }
 
 button:visited,
 .button1:visited,
 input.button:visited {
-  color: white;
+  color: LightText;
 }
 
 .form__contact {
@@ -242,14 +248,14 @@ input.button:visited {
 }
 
 .contactinfobox {
-  background-color: var(--LightBlue);
+  background-color: var(--AccentPink);
   border: 3px solid var(--DarkBlue);
   margin-right: 25px;
   border-radius: 15%;
   padding: 30px;
   margin-left: 80px;
   width: 650px;
-  height: 200px;
+  height: 250px;
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -283,22 +289,25 @@ table.tbl-experience th {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 .profile__portrait {
   float: left;
   margin-right: 40px;
-  max-width: 300px;
+  max-width: 600px;
   width: 100%;
   height: auto;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 .profile__text {
-  font-size: larger;
+  font-size: x-large;
   flex: 1 1 100px;
+  text-align: left;
+  padding: 10px;
+  line-height: 1.75;
 }
 
 /* Start of grid fallback */
@@ -316,7 +325,7 @@ table.tbl-experience th {
 }
 
 .project-list__item {
-  background-color: var(--LightBlue);
+  background-color: var(--AccentBlue);
   padding: 30px 10px 30px 10px;
 }
 
@@ -329,7 +338,7 @@ table.tbl-experience th {
 }
 
 #CheckBackText {
-  color: var(--HotPink);
+  color: var(--AccentPink);
   font-size: 35px;
 }
 
@@ -386,6 +395,32 @@ svg* {
   font-size: 10px;
 }
 
+
+.gitSVG {
+  height: 32px;
+  width: auto;
+  margin: 5px;
+}
+
+.xSVG {
+  height: 30px;
+  width: auto;
+  margin: 5px;
+}
+
+.linkedSVG {
+  height: 35px;
+  width: auto;
+  margin: 5px;
+}
+
+
+.emailLink {
+  color: var(--LightText);
+  
+}
+
+
 /* For smaller displays */
 @media all and (max-width: 430px) {
   .project-list {
@@ -420,7 +455,7 @@ svg* {
       max-width: 300px;
       width: 100%;
       height: auto;
-      border-radius: 50%;
+      /* border-radius: 50%; */
   }
 
   .profile__text {
@@ -437,7 +472,7 @@ svg* {
   }
 
   .contactinfobox {
-    background-color: #a9bbe4;
+    background-color: var(--AccentPink);
     border: 3px solid#0a1464;
     margin: 15px;
     padding: 25px;
