--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -344,7 +344,7 @@ table.tbl-experience th {
   max-width: 300px;
   width: 100%;
   height: auto;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 .profile__text {
