--- a/css/styles.css
+++ b/css/styles.css
@@ -251,12 +251,12 @@ input.button:visited {
 
 .contactinfobox {
   background-color: var(--AccentPink);
-  border: 3px solid var(--DarkBlue);
+  border: 3px solid var(--AccentBlue);
   margin-right: 25px;
-  border-radius: 15%;
+  border-radius: 30px;
   padding: 30px;
   margin-left: 80px;
-  width: 650px;
+  width: 550px;
   height: 250px;
   text-align: center;
   align-items: center;
@@ -328,20 +328,28 @@ table.tbl-experience th {
 }
 
 .project-list__item {
-  background-color: var(--AccentBlue);
+  background-color: #084e5e;
   padding: 30px 10px 30px 10px;
+  color: white;
+}
+
+.project-list__item a{
+  color: white;;
 }
 
 .project-list__item:last-child {
   background-color: rgba(239, 136, 170, 0.5);
+  color: var(--LightText);
   grid-column-start: 3;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 4;
+  color: white;
 }
 
 #CheckBackText {
-  color: var(--AccentPink);
+  color: var(--LightText);
+  background: var(--AccentPink);
   font-size: 35px;
 }
 
